DRAFT: feat: added basket

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Main</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<h1>I hate thymeleaf</h1>
+<div class="container">
+    <h1>Welcome page</h1>
+    <a href="\basket">shop</a>
+    <a href="\login">login</a>
+</div>
 </body>
 </html>
